# todo-flask

./: README.md
flask/: pyproject.toml
todo-fastapi-app/: Makefile  pyproject.toml
todo-fastapi-app/app/: main.py
todo-fastapi-app/app/db/: database.py  db_models.py  fake_users_db.py  posts.py  todo-fastapi-app.db
todo-fastapi-app/app/domain_models/: post_domain_model.py  token_domain_model.py  user_domain_model.py
todo-fastapi-app/app/gateways/: posts_gateway.py  users_gateway.py
todo-fastapi-app/app/helpers/: oauth2.py
todo-fastapi-app/app/middleware/: cors.py
todo-fastapi-app/app/models/: post_model.py  user_model.py  user_models.py
todo-fastapi-app/app/schemas/: post_schema.py  user_schema.py
todo-fastapi-app/tests/: test_e2e.py
todo-flask-app/: Makefile  app.py  pyproject.toml
todo-flask-app/app/: __init__.py  app.py  config.py  health.py  todo.py
todo-flask-app/app/controllers/: health.py  todo.py
todo-flask-app/app/db/: db.py
todo-flask-app/app/models/: post.py
todo-flask-app/app/validation/: post.py
todo-flask-app/tests/e2e/: test_health.py
todo-flask-app/tests/unit/models/: test_post.py
