[tool.poetry]
name = "todo-fastapi-app"
version = "0.1.0"
description = ""
authors = ["Bella Cockrell <56876663+bella-cockrell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
pydantic = "^2.1.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pyright = "^1.1.321"
pytest = "^7.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
