[tool.poetry]
name = "todo-flask"
version = "0.1.0"
description = ""
authors = ["Bella Cockrell <56876663+bella-cockrell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
marshmallow = "^3.20.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pyright = "^1.1.321"
pytest = "^7.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
venv = "poetry"

reportMissingImports = true
reportMissingTypeStubs = true

pythonVersion = "3.10"
pythonPlatform = "MacOS"

executionEnvironments = [
  { root = "todo-flask-app/app", pythonVersion = "3.10" },
  { root = "todo-flask-app/tests", extraPaths = ["todo-flask-app/tests/unit", "todo-flask-app/tests/e2e", "todo-flask-app/app" ]},
  { root = "todo-flask-app" }
]